--- a/src/layouts/base.hbs
+++ b/src/layouts/base.hbs
@@ -6,10 +6,9 @@
     {{> title}}
   </title>
 	<link rel="stylesheet" href="../styles/main.css">
+	{{{head}}}
 </head>
 <body>
-  {{> header}}
   {{{body}}}
-  {{> footer}}
 </body>
 </html>
