--- a/src/pages/404.hbs
+++ b/src/pages/404.hbs
@@ -3,5 +3,5 @@
 <main>
   <h1>404</h1>
 	<p class="center">Не туда попали</p>
-	<div class="center"><a href="./index.hbs">Назад к чатам</a></div>
+	<div class="center"><a href="./chat.hbs">Назад к чатам</a></div>
 </main>
