--- a/src/pages/chat.hbs
+++ b/src/pages/chat.hbs
@@ -3,5 +3,5 @@
 <main>
   <h1>Страница чатов и лента переписки (заглушка)</h1>
 
-	<p><input name="message" placeholder="Сообщение"><button>-></button></p>
+	<p class="center"><input name="message" placeholder="Сообщение"><button>></button></p>
 </main>
