--- a/src/pages/500.hbs
+++ b/src/pages/500.hbs
@@ -3,5 +3,5 @@
 <main>
   <h1>500</h1>
 	<p class="center">Уже фиксим</p>
-	<div class="center"><a href="./index.hbs">Назад к чатам</a></div>
+	<div class="center"><a href="./chat.hbs">Назад к чатам</a></div>
 </main>
