--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,14 +1,4 @@
+---
+head: <meta http-equiv="Refresh" content="0;/login.html">
+---
 {{!< base}}
-
-<main>
-	<h1>Представьтесь, пожалуйста</h1>
-
-	<form>
-		<label for="login">Логин</label>
-		<input id="login" name="login">
-		<label for="password">Пароль</label>
-		<input type="password" id="password" name="password">
-		<button>Войти</button>
-	</form>
-	<div class="center"><a href="./register.hbs">Впервые?</a></div>
-</main>
