Работы по сближению с макетом

--- a/src/pages/404.hbs
+++ b/src/pages/404.hbs
@@ -1,7 +1,3 @@
 {{!< base}}
 
-<main>
-  <h1>404</h1>
-	<p class="center">Не туда попали</p>
-	<div class="center"><a href="./chat.hbs">Назад к чатам</a></div>
-</main>
+{{> error-page header='404' desc='Не туда попали'}}
