--- a/src/pages/500.hbs
+++ b/src/pages/500.hbs
@@ -1,7 +1,3 @@
 {{!< base}}
 
-<main>
-  <h1>500</h1>
-	<p class="center">Уже фиксим</p>
-	<div class="center"><a href="./chat.hbs">Назад к чатам</a></div>
-</main>
+{{> error-page header='500' desc='Уже фиксим'}}
