--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,10 +14,33 @@ form {
 	}
 }
 
+main {
+	h1, p, a {
+		margin: 0.5rem;
+	}
+}
+
 .center, h1 {
 	text-align: center;
 }
 
 input[type=file] {
 	max-width: 200px;
+}
+
+html, body {
+	height: 100%;
+	margin: 0;
+}
+
+.error-page__main {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+}
+
+.error-page__whitespace-div {
+	height: 2rem;
 }
