--- a/src/layouts/base.hbs
+++ b/src/layouts/base.hbs
@@ -5,6 +5,7 @@
   <title>
     {{> title}}
   </title>
+	<link rel="shortcut icon" type="image/png" href="../static/favicon.png">
 	<link rel="stylesheet" href="../styles/main.css">
 	{{{head}}}
 </head>
