--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,9 @@
+html, body {
+	height: 100%;
+	margin: 0;
+	font-family: Verdana sans-serif;
+}
+
 form {
 	display: flex;
 	flex-direction: column;
@@ -28,11 +34,6 @@ input[type=file] {
 	max-width: 200px;
 }
 
-html, body {
-	height: 100%;
-	margin: 0;
-}
-
 .error-page__main {
 	height: 100%;
 	display: flex;
@@ -43,4 +44,51 @@ html, body {
 
 .error-page__whitespace-div {
 	height: 2rem;
+}
+
+.login__main {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+
+
+
+	form {
+		/*border: 1px solid gray;*/
+		border-radius: 5px;
+		box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+
+		padding: 0.5rem;
+
+		h1 {
+			font-size: 1.5rem;
+		}
+
+		button {
+			border: none;
+			background-color: blue;
+			color: white;
+			border-radius: 3px;
+			cursor: pointer;
+			padding: 0.5rem;
+		}
+
+		input {
+			border-top: none;
+			border-left: none;
+			border-right: none;
+			margin-bottom: 0.5rem;
+
+			&:focus {
+				border-bottom-color: blue;
+				outline: none;
+			}
+		}
+
+		label {
+			font-size: 0.8rem;
+		}
+	}
 }
