--- a/src/layouts/base.hbs
+++ b/src/layouts/base.hbs
@@ -6,7 +6,7 @@
     {{> title}}
   </title>
 	<link rel="shortcut icon" type="image/png" href="../static/favicon.png">
-	<link rel="stylesheet" href="../styles/main.css">
+	<link rel="stylesheet" href="base.pcss">
 	{{{head}}}
 </head>
 <body>
