--- a/src/components/error/error.css
+++ b/src/components/error/error.css
@@ -2,4 +2,8 @@
 	font-size: 0.75rem;
 	color: red;
 	text-overflow: ellipsis;
+	overflow: clip;
+	white-space: nowrap;
+	max-width: var(--input-max-width);
+	height: 1em;
 }
