--- a/src/pages/login/login.pcss
+++ b/src/pages/login/login.pcss
@@ -28,6 +28,7 @@
 			border-left: none;
 			border-right: none;
 			margin-bottom: 0.5rem;
+			width: var(--input-max-width);
 
 			&:focus {
 				border-bottom-color: blue;
