--- a/src/app.pcss
+++ b/src/app.pcss
@@ -14,3 +14,47 @@ main {
     margin: 0.5rem;
   }
 }
+
+.login__main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+
+  form {
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+    padding: 0.5rem;
+
+    h1 {
+      font-size: 1.5rem;
+    }
+
+    button {
+      border: none;
+      background-color: blue;
+      color: white;
+      border-radius: 3px;
+      cursor: pointer;
+      padding: 0.5rem;
+    }
+
+    input {
+      border-top: none;
+      border-left: none;
+      border-right: none;
+      margin-bottom: 0.5rem;
+      width: var(--input-max-width);
+
+      &:focus {
+        border-bottom-color: blue;
+        outline: none;
+      }
+    }
+
+    label {
+      font-size: 0.8rem;
+    }
+  }
+}
