--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,17 +1,1 @@
-/*.button {*/
-/*  margin: 10px;*/
-/*}*/
-
-/*.button__button {*/
-/*  background: var(--message-background);*/
-/*  border: none;*/
-/*  cursor: pointer;*/
-/*  color: white;*/
-/*  padding: 15px 32px;*/
-/*  font-size: 14px;*/
-/*  border-radius: 20px;*/
-/*}*/
-
-/*.button__button:hover {*/
-/*  opacity: 0.8;*/
-/*}*/
+/* no-empty-source */
