Implement basic user profile APIs

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -58,3 +58,10 @@ main {
     }
   }
 }
+
+.avatar {
+  --avatar-size: 100px;
+  width: var(--avatar-size);
+  height: var(--avatar-size);
+  border-radius: calc(var(--avatar-size) / 2);
+}
