Change chat styles' names

--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -63,13 +63,13 @@
 		border-radius: 10px;
 	}
 
-	.message.from {
+	.message.in {
 		background-color: lightgreen;
 		border-top-left-radius: 0;
 		align-self: flex-start;
 	}
 
-	.message.to {
+	.message.out {
 		background-color: lightblue;
 		border-bottom-right-radius: 0;
 		align-self: flex-end;
