--- a/src/components/chat-summary/chat-summary.pcss
+++ b/src/components/chat-summary/chat-summary.pcss
@@ -5,7 +5,6 @@
 	cursor: pointer;
 
 	.avatar {
-		border-radius: 8px;
 		float: left;
 	}
 
@@ -49,4 +48,11 @@
 
 .chat-summary_selected {
   background-color: #1f9af3;
+}
+
+.chat-summary__avatar {
+  width: 64px;
+  height: 64px;
+  margin: 4px;
+  border-radius: 32px;
 }
