--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -52,11 +52,11 @@
 
 .history {
 	flex-grow: 1;
-
 	display: flex;
 	flex-direction: column;
 	justify-content: end;
 	padding: 10px;
+  min-width: 0;
 
 	.message {
 		padding: 10px;
@@ -74,5 +74,10 @@
 		border-bottom-right-radius: 0;
 		align-self: flex-end;
 	}
+
+  .message.system {
+    align-self: center;
+    background-color: lightgray;
+  }
 }
 
