--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -54,9 +54,9 @@
 	flex-grow: 1;
 	display: flex;
 	flex-direction: column;
-	justify-content: end;
 	padding: 10px;
   min-width: 0;
+  overflow: auto;
 
 	.message {
 		padding: 10px;
